manifest/networkpolicy/dumpstore-example/01-deny-all-traffic-to-an-application.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-deny-all
spec:
  podSelector:
    matchLabels:
      app: dumpstore-backend-app
  ingress: []
